Add: Implement dark mode support

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,4 +24,27 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+/* 다크모드 대응 */
+@media (prefers-color-scheme: dark) {
+  .dark\:bg-gray-900 {
+    background-color: rgb(17, 24, 39);
+  }
+  
+  .dark\:text-white {
+    color: rgb(255, 255, 255);
+  }
+  
+  .dark\:text-gray-300 {
+    color: rgb(209, 213, 219);
+  }
+  
+  .dark\:border-gray-700 {
+    border-color: rgb(55, 65, 81);
+  }
+  
+  .dark\:bg-gray-800 {
+    background-color: rgb(31, 41, 55);
+  }
 } 
